Solve display issues on smaller screens

--- a/first.css
+++ b/first.css
@@ -4,8 +4,10 @@ body {
 
 #container-first {
   width: 100%;
-  height: 100vh;
+  height: 400px;
   padding: 1px;
+  overflow-y: scroll;
+
 }
 
 #title {
@@ -23,29 +25,31 @@ body {
 }
 
 .option {
-  display: flex;
-  background-color: aqua;
-  width: 48%;
-  margin: 40px 2px;
+  width: 49%;
+  margin: 0px 2px;
 }
 
-.option input {
-  background-color: black;
-  color: white;
-  border-radius: 8px;
+.move{
+  width: 100%;
 }
 
-.option input:hover {
+.right {
+  text-align: right;
+}
+
+button:hover {
   cursor: pointer;
-  border: 2px solid green;
+}
 
+button {
+  border-radius: 8px;
 }
 
 .fa {
   width: 100px;
   color: green;
 }
-
+/*
 @media screen and (min-width: 550px) {
   .right  {
     position: fixed;
@@ -86,4 +90,4 @@ body {
     left: 0.5em;
     font-size: 0.8rem;
   }
-}
+} */
