--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,16 @@ body {
 }
 
 #container {
-  position: fixed;
-  top: 0;
-  left: 0;
+  /* position: fixed; */
+  /* top: 0; */
+  /* left: 0; */
   width: 100%;
   height: 100vh;
   padding: 1px;
+}
+
+.sub-con {
+  margin-bottom: 4em;
 }
 
 #title,
